# BranchCoder

./: .env  .gitignore  .vscodeignore  ACCESS_GUIDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  README.zh-CN.md  Readme.md  TROUBLESHOOTING.md  classes_slices.json  docker-compose.yml  docker.env  mv_logs.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  rm_logs.sh  tsconfig.json
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/tests/: class_slicer_test.py  function_slicer_test.py  indexing_test.py
doc/: flowchart.md  iclr_conference.bib  iclr_conference.sty  main.fdb_latexmk  main.fls
frontend/: Dockerfile  README.md  components.json  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx
media/: chat.css
python/: ai_service.py  llm_client.py  rag_check_changes_service.py  rag_init_service.py  rag_llm.py  rag_update_service.py
sample_ws/: build_graph.py  main.py  renderer.py  strategy.py
sandbox/: Dockerfile  code-server-config.yaml  pyproject.toml  requirements.txt  supervisord.conf
sandbox/app/: main.py
sandbox/app/api/: router.py
sandbox/app/api/v1/: browser.py  file.py  mcp_fastmcp.py  shell.py
sandbox/app/core/: exceptions.py
sandbox/app/models/: file.py  mcp.py
sandbox/app/schemas/: browser.py  file.py
sandbox/app/services/: browser.py  file.py  mcp_fastmcp.py  shell.py  supervisor.py
searxng/: settings.yml
src/: ChatPanel.ts  extension.ts  patchPreview.ts  patchUtils.ts  snapshot.ts
(+300 files in other folders)
