[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "bokeh>=3.1.0",
    "browser-use==0.5.11",
    "charset-normalizer>=3.3.2",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.0.0",
    "h5py>=3.9.0",
    "joblib>=1.3.0",
    "lightgbm>=3.3.0",
    "lxml>=4.9.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "patchright>=1.43.0",
    "pillow>=10.0.0",
    "playwright>=1.43.0",
    "plotly>=5.14.0",
    "pyarrow>=12.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.65.0",
    "uvicorn>=0.35.0",
    "xgboost>=1.7.0",
    "xlrd>=2.0.0",
]
